[package]
name = "clap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }

[[bin]]
name = "ejemplo1"
path = "src/ejemplo1.rs"

[[bin]]
name = "ejemplo2"
path = "src/ejemplo2.rs"

